# ChaosMesh

./: .env.example  .gitignore  DASHBOARD_ISSUE_EXPLAINED.md  DEMO_DAY_REHEARSAL.md  Dockerfile  FINAL_STATUS.md  FIX_DASHBOARD_BUTTON.md  FIX_EPISODE_CREATION.md  HACKATHON_SUBMISSION.md  HOW_TO_START_EVERYTHING.md  QUICKSTART.md  REACT_DASHBOARD_QUICKSTART.md  README.md  TESTING_GUIDE.md  alembic.ini  control_panel.html  diagnose_dashboard.py  docker-compose.prod.yml  docker-compose.yml  environment.py  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  start_server.py  test_dashboard_button.py  test_episode_creation.py  test_manual.py
alembic/: env.py
chaosmesh_arena/: __init__.py  config.py  env.py  env_pool.py  models.py
chaosmesh_arena/agents/: __init__.py  base_agent.py  commander.py  database.py  diagnostics.py  remediation.py  security.py
chaosmesh_arena/auth/: __init__.py  jwt_handler.py  middleware.py  security_headers.py
chaosmesh_arena/bus/: __init__.py  message_bus.py
chaosmesh_arena/chaos/: __init__.py  chaos_orchestrator.py
chaosmesh_arena/cli/: __init__.py  config.py  main.py
chaosmesh_arena/cli/commands/: episodes.py  leaderboard.py  login.py  replay.py  run.py
chaosmesh_arena/cli/tui/: __init__.py  run_app.py
chaosmesh_arena/database/: __init__.py  base.py  episode_repo.py  leaderboard_repo.py  models_db.py  user_repo.py
chaosmesh_arena/llm/: __init__.py  cache.py  ollama_client.py  openrouter_client.py  router.py
chaosmesh_arena/memory/: __init__.py  belief_tracker.py  episode_store.py  vector_store.py
chaosmesh_arena/progression/: __init__.py  difficulty_fsm.py
chaosmesh_arena/reporting/: __init__.py  html_reporter.py
chaosmesh_arena/rewards/: __init__.py  calculator.py
chaosmesh_arena/sim/: __init__.py  cluster_state.py  failure_injector.py  log_synthesizer.py  metrics_engine.py
chaosmesh_arena/templates/: __init__.py  incident_registry.py
dashboard/: __init__.py  app.py  metrics_panel.py  topology_panel.py
examples/: trl_curriculum_level1_3.ipynb
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ControlPanel.tsx  Header.tsx  IncidentList.tsx  MetricsDisplay.tsx  Navbar.tsx  StatusBar.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: AgentsPage.tsx  ClusterPage.tsx  DashboardPage.tsx  DemoModePage.tsx  DocsPage.tsx  EpisodesPage.tsx  IncidentsPage.tsx  MetricsPage.tsx  SettingsPage.tsx
frontend/src/types/: api.ts
hf_space/: README.md
scripts/: build_push_arm64.sh  demo_day_rehearsal.py  hf_warm_keeper.cron  hf_warm_keeper.py  pre_submission_validate.py  precompute_demo.py  setup_env.sh  setup_oci.sh
sdk/: README.md  pyproject.toml
sdk/chaosmesh_sdk/: __init__.py  client.py  database_constants.py  episode.py  exceptions.py  gymnasium_env.py  models.py
server/: app.py  main.py  ws_manager.py
server/routes/: __init__.py  auth.py  demo.py  env.py  episodes.py  leaderboard.py  openenv_compat.py
