[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaosmesh-arena"
version = "0.1.0"
description = "Multi-agent adversarial SRE training environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["reinforcement-learning", "multi-agent", "kubernetes", "sre", "openenv"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  # Core RL / Gymnasium
  "gymnasium>=0.29.1",
  # Async framework
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=12.0",
  # Data validation (RFC requirement)
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  # Agent reasoning
  "langgraph>=0.1.9",
  "langchain-core>=0.2.0",
  # LLM backends
  "httpx>=0.27.0",
  "openai>=1.35.0",
  # Auth & Security
  "python-jose[cryptography]>=3.3.0",  # JWT
  "passlib[bcrypt]>=1.7.4",            # API key hashing
  "bcrypt>=4.1.0",
  # Message bus / cache
  "redis[hiredis]>=5.0.0",
  # Vector memory
  "chromadb>=0.5.0",
  # Relational persistence
  "sqlalchemy[asyncio]>=2.0.0",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.29.0",                   # Async Postgres driver
  "alembic>=1.13.0",                   # DB migrations
  # Observability
  "prometheus-fastapi-instrumentator>=7.0.0",
  # Templating
  "jinja2>=3.1.4",
  # K8s simulation graph
  "networkx>=3.3",
  # Utilities
  "python-dotenv>=1.0.0",
  "structlog>=24.2.0",
  "slowapi>=0.1.9",
  "python-multipart>=0.0.9",
  "gradio>=4.31.0",
  "plotly>=5.22.0",
  "pandas<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",          # test client
  "mypy>=1.10.0",
  "ruff>=0.4.0",
]
examples = [
  "trl>=0.9.0",
  "torch>=2.3.0",
  "matplotlib>=3.9.0",
  "jupyter>=1.0.0",
]

[project.scripts]
chaosmesh-server = "server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["chaosmesh_arena", "server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.isort]
known-first-party = ["chaosmesh_arena", "server"]
